# aesp

./: Cargo.toml  README.md
docs/: Constants.md  Encryption.md  Key Schedule.md  Message Authentication (GCM).md  Modes of Operation.md
docs/.obsidian/: workspace.json
src/: args.rs  lib.rs  main.rs
src/aes_core/: decryption.rs  encryption.rs  interface.rs  mod.rs  mode.rs  modes.rs  util.rs
src/aes_lib/: cipher.rs  error.rs  interface.rs  key.rs  mod.rs  mode.rs  util.rs
src/aes_lib/core/: constants.rs  core_util.rs  decryption.rs  encryption.rs  mod.rs
src/aesp/: cipher.rs  error.rs  key.rs  mod.rs  util.rs
src/aesp/core/: constants.rs  decryption.rs  encryption.rs  mod.rs  util.rs
src/aesp/modes/: ctr.rs  ecb.rs  gcm.rs  mod.rs  util.rs
tests/: ecb_tests.rs  gcm_tests.rs
tests/vectors/: aes128ecb.rsp  aes128gcm.rs  aes192ecb.rsp  aes256ecb.rsp  aes256gcm.rs
