[package]
name = "aesp"
version = "0.1.1"
authors = ["Toby Grice"]
description = "Library and optional CLI for AES in parallel. Personal project -- use at your own risk."
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/tobygrice/aesp"
keywords = ["aes", "crypto", "gcm", "ctr", "aes-gcm"]
categories = ["cryptography"]

[dependencies]
clap = { version = "4.5.56", features = ["derive"], optional = true }
hex-literal = { version = "1.1.0", optional = true }
rand = "0.9.2"
rayon = "1.11.0"
thiserror = "2.0.18"

[features]
default = []
cli = ["dep:clap"]
test-vectors = ["dep:hex-literal"]

[[bin]]
name = "aesp"
path = "src/main.rs"
required-features = ["cli"]

[[test]]
name = "aes128gcm"
path = "tests/vectors/aes128gcm.rs"
required-features = ["test-vectors"]

[[test]]
name = "aes256gcm"
path = "tests/vectors/aes256gcm.rs"
required-features = ["test-vectors"]

[[test]]
name = "ecb_tests"
path = "tests/ecb_tests.rs"
required-features = ["test-vectors"]
